Fixed styling issues on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,7 @@ flex-direction: column;
     border-radius: 5px;
 }
 
-.playerSelectionRock:hover, .playerSelectionPaper:hover, .playerSelectionScissors:hover {
-filter: invert(1);
-transform: scale(1.10);
-border-radius: 5px;
-}
+
 
 .playerSelectionRock {
     background-image: url('../images/rock.png');
@@ -276,10 +272,6 @@ border-radius: 5px;
     transition-duration: 0.125s;
 }
 
-.buttons:hover{
-    background-color: white;
-    color: black;
-}
 
 .buttons:active {
     background-color: black;
@@ -295,19 +287,6 @@ border-radius: 5px;
     font-size: 20px;
     opacity: 0.6;
     background-color:rgba(0, 0, 0, 0.5);
-}
-
-
-
-@media only screen and (max-width: 775px) {
-    .gameArea, .playArea {
-        width: 100%;
-        height: 100vh;
-        margin: 0px;
-    }
-    .playerSelectionRock, .playerSelectionPaper, .playerSelectionScissors {
-        min-width: 120px;
-    }
 }
 
 
@@ -360,3 +339,48 @@ border-radius: 5px;
     from {top: 225px; opacity: 1;}
     to {top: 0; opacity: 0;}
   }
+
+  @media only screen and (max-width: 775px) {
+    .gameArea, .playArea {
+        width: 100%;
+        height: 95vh;
+        margin: 0px;
+    }
+
+    .gameTitleArea {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        max-height: 15px;
+        justify-content: space-around;
+        align-content: space-around;
+        padding-top: 2px;
+        
+    }
+
+    .playerSelectionRock, .playerSelectionPaper, .playerSelectionScissors {
+        min-width: 120px;
+    }
+
+    .playerSelectionRockSelected, .playerSelectionPaperSelected, .playerSelectionScissorsSelected {
+        min-width: 120px;
+
+    }    
+
+}
+
+@media only screen and (min-width: 776px) {
+
+    .buttons:hover{
+        background-color: white;
+        color: black;
+    }
+
+    .playerSelectionRock:hover, .playerSelectionPaper:hover, .playerSelectionScissors:hover {
+        filter: invert(1);
+        transform: scale(1.10);
+        border-radius: 5px;
+        }
+
+}
+
